--- a/css/styles.css
+++ b/css/styles.css
@@ -1022,7 +1022,7 @@ rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     background-color: var(--before-color);
     opacity: 0;
     transform: translateY(100%);
-    transition: transform 250ms var(--cubic-bezier);
+    transition: 250ms var(--cubic-bezier);
     text-decoration: none;
 
 }
