--- a/css/styles.css
+++ b/css/styles.css
@@ -379,6 +379,9 @@ p, ul {
 }
 .data-close-modal {
     position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     right: 10px;
     top: 10px;
     width: 30px;
@@ -600,6 +603,8 @@ p, ul {
     text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+
+    padding-bottom: 10px;
 
     color:var(--hero-button);
 }
